css/include/initial.css
/* ... */
#skip-to-content-link:focus {
    top: 0;
    transition:
        top 0.1s ease-in;
}

/***********/
/* SIDEBAR */
/***********/

#sidebar {
	font-variant: small-caps;
}

#sidebar a {
    display: block;
}

@media only screen and (min-width: 650px) {
	#sidebar {
        padding: 0 40px 0 10px;
        width: 100px;
    }
    #sidebar a#logo {
        margin: 1em 0 2.25em 0;
        width: fit-content;
    }
    #sidebar a#logo svg {
        display: block;
        width: 64px;
    }
    #sidebar a.me::after,
    #sidebar a.annotations-newest::after {
        content: "";
        display: block;
        margin: 0.55em 0 0.45em 0;
        border-top: 1px dotted var(--GW-sidebar-horizontal-rule-color);
    }
    #sidebar a.patreon {
        font-size: 0.9em;
    }
}

@media only screen and (max-width: 649px) {
    #sidebar {
        justify-content: center;
        margin: 0.75em 0 0.5em 0;
    }
    #sidebar a {
        border: 1px dotted var(--GW-sidebar-mobile-link-border-color);
        padding: 0.25em 0.5em;
        text-align: center;
        margin: 1px;
    }
    #sidebar,
    #sidebar-links {
        display: flex;
    }
    #sidebar-links {
        flex-flow: row wrap;
        flex: 1 1 100%;
        margin: 0;
    }
    #sidebar a#logo {
        margin: 1px 1px 1px 0;
        padding: 0.5em 0.375em;
        display: flex;
    }
    #sidebar a#logo svg {
        display: block;
        width: 2.5rem;
    }
    #sidebar a:not(#logo) {
        flex: 1 1 auto;
    }
    #sidebar a.new,
    #sidebar a.mail, 
    #sidebar a.annotations-newest {
		max-width: 30%;
	}
    #sidebar a.site,
    #sidebar a.me { 
    	min-width: 33%;
    }
    #sidebar a.patreon {
        display: none;
    }
}

/***************/
/* PAGE HEADER */
/***************/

header {
    overflow: auto;
}

header h1 {
    margin: 0.75em 0;
    text-align: center;
    text-transform: none;
    font-variant: small-caps;
    font-size: 2.5em;
    line-height: 1.15;
    font-weight: 600;
    letter-spacing: -1px;
}

@media all and (max-width: 649px) {
    header h1 {
        font-size: 2em;
    }
}

/***********************/
/* PAGE METADATA BLOCK */
/***********************/

#page-metadata {
    margin: 0 0 2rem 0;
    line-height: 1.5;
}

/* Override normal handling of italics: before, we wrapped descriptions in `<em>`; however, they compile to HTML which can contain italics of their own (eg. book titles). This causes HTML Tidy to warn about nested italics (which is valid HTML but *usually* means you've made an error - this often triggers when I mess up bolding, for example, like on /GPT-3 ). So we removed the wrapper in favor of the above `font-style: italic`. However, now the titles don't unitalicize automatically like they would for nested italics! So we force italicized titles back to normal Roman font to match the expected typographic convention. */
#page-description {
    display: block;
    font-style: italic;
    text-align: justify;
}
/*  The following is needed only due to the .justified-not no-hyphens styles;
    when the A/B test of justification & indentation is done, remove this also.
        —SA 2022-11-20
 */
#page-description p {
    -webkit-hyphens: auto;
    -ms-hyphens: auto;
    hyphens: auto;
}
#page-description em {
    font-style: normal;
}

#page-metadata > .link-tags {
    margin: 0 auto 0.25em auto;
}
#page-metadata > .link-tags a {
    white-space: nowrap;
}
#page-metadata > .link-tags a:nth-child(n+2) {
    margin: 0 0.05em 0 0.1em;
}

#page-metadata > .link-tags,
#page-metadata-block {
    hyphens: none;
}

#page-metadata-block > span {
    white-space: nowrap;
}

#page-source a {
    font-variant-numeric: oldstyle-nums;
}

/*  Interpunct separators for the metadata fields; looks nicer than semicolons
    or slashes
 */
#page-metadata-block > span:not(:last-child)::after {
    content: "\00B7"; /* interpunct MIDDLE DOT (U+00B7) '·' */
    margin: 0 0.35em 0 0.65em;
}

@media all and (min-width: 650px) {
    #page-metadata {
        overflow: auto;
        font-size: calc((19/20) * var(--GW-base-font-size));
    }
    #page-description {
        margin: 0 auto 0.75em auto;
        hyphens: none;
    }
    #page-metadata-block,
    #page-metadata > .link-tags {
        font-size: calc((18/20) * var(--GW-base-font-size));
    }
}
@media all and (max-width: 649px) {
    #page-metadata {
        overflow: visible;
        font-size: calc((17/18) * var(--GW-base-font-size));
    }
    #page-description {
        margin: 0 auto 1em auto;
        line-height: calc(25/17);
    }
    #page-metadata > .link-tags,
    #page-metadata-block {
        text-align: center;
    }
    #page-metadata > .link-tags {
        margin: 0 auto 0.75em auto;
    }
    #page-metadata-block {
        font-size: calc((16/18) * var(--GW-base-font-size));
        line-height: calc(25/16);
    }
    #page-metadata-block > #page-status::after,
    #page-metadata-block > #page-importance::after {
        content: none;
    }

    #page-metadata-block {
        display: flex;
        flex-flow: row wrap;
        justify-content: center;
    }
    /* date, status */
    #page-metadata-block :nth-child(1),
    #page-metadata-block :nth-child(2) {
        order: 1;
    }
    /* certainty, importance */
    #page-metadata-block :nth-child(3),
    #page-metadata-block :nth-child(4) {
        order: 3;
    }
    /* backlinks, similar, bibliography */
    #page-metadata-block :nth-child(5),
    #page-metadata-block :nth-child(6),
    #page-metadata-block :nth-child(7) {
        order: 5;
    }
    #page-metadata-block::before,
    #page-metadata-block::after {
        content: "";
        width: 100%;
    }
    /* break between date/status and certainty/importance */
    #page-metadata-block::before {
        order: 2;
    }
    /* break between certainty/importance and backlinks/similar/bibliography */
    #page-metadata-block::after {
        order: 4;
    }
}
/* ... */

